# milkviz

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml  requirements.dev.txt  setup.cfg  setup.py  test.ipynb
.github/workflows/: build.yaml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  requirements.txt
docs/API/: milkviz.anno_clustermap.rst  milkviz.bubble.rst  milkviz.dot.rst  milkviz.dot_heatmap.rst  milkviz.graph.rst  milkviz.point_map.rst  milkviz.point_map3d.rst  milkviz.polygon_map.rst  milkviz.stacked_bar.rst  milkviz.upset.rst  milkviz.venn.rst
examples/: README.rst  __plot_upset.py  plot_anno_heatmap.py  plot_bubble.py  plot_colormaps.py  plot_dot.py  plot_dot_heatmap.py  plot_dot_heatmap_matrix.py  plot_dot_heatmap_matrix_masked.py  plot_graph.py  plot_point_map3d.py  plot_point_map_cat.py  plot_point_map_value.py  plot_polygon_map.py  plot_stacked_bar.py  plot_upset.py  plot_venn.py
milkviz/: __init__.py  _bubble.py  _cell_map.py  _clustermap.py  _dot.py  _dot_matrix.py  _graph.py  _stacked_bar.py  _upset.py  _venn.py  colormap.py  types.py  utils.py
milkviz/utils/: __init__.py  doc.py  fig.py  geo.py  legend.py  params.py
