[metadata]
name = milkviz
version = 0.5.0
description = Self-opinionated miscellaneous visualizations library in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mr-Milk/milkviz
author_email = yb97643@um.edu.mo
license = MIT
license_file = LICENSE
classifiers =
      License :: OSI Approved :: MIT License
      Programming Language :: Python :: 3
      Intended Audience :: Science/Research
      Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
platforms = any
python_requires = >= 3.7
install_requires =
      numpy
      pandas
      matplotlib
      seaborn

[options.extras_require]
all =
      networkx
      matplotlib-venn
      UpSetPlot
